<resources>
    <string name="app_name">Beacon</string>

    <!--<string name="default_web_client_id" translatable="false">56731245366-dk47rjejeolm67jp3eec1nr030cm97ek.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id" translatable="false">2041759999371752</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2041759999371752</string>



    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="forgot_password_msg">it\'s okay. We\'ll help you out of this pickle in no time.</string>
    <string name="or">or</string>
    <string name="search_campaign">Search campaign</string>
    <string name="popular_place">Popular Place</string>
    <string name="go">GO</string>
    <string name="name">Name*</string>
    <string name="register">Register</string>
    <string name="email">Email*</string>
    <string name="email_">Email</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="splash_to_login_transition_name" translatable="false">splash to login transition logo</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="edit_preference">Edit Preference</string>
    <string name="want_to_edit_your_profile">Want to edit your profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="no_suitable_app_found">No suitable app found to handle this</string>
    <string name="loading">Loading...</string>
    <string name="take_photo">Take Photo</string>
    <string name="album">Album</string>
    <string name="cancel">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose</string>
    <string name="all_state">All States</string>
    <string name="select_state">Select State</string>
    <string name="all_cities">All Cities</string>
    <string name="select_city">Select City</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="choose_a_profile_photo">choose a profile photo</string>
    <string name="campaigns">Campaigns</string>
    <string name="search">Search</string>
    <string name="nearby_store">Nearby store based on</string>
    <string name="radius">Radius</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_preference">Save Preference</string>
    <string name="age">Age</string>
    <string name="interest">Interest</string>
    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="signup">Signup</string>
    <string name="update_profile">Update Profile</string>
    <string name="pls_enter_filed">Please enter this field</string>
    <string name="allow_permission">Allow permission to go further</string>
    <string name="pass_not_match">Password and confirm password does not match</string>
    <string name="setting">Setting</string>




    <string name="pls_select_state">Please select state</string>
    <string name="pls_select_city">Please select city</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_gender">Select Gender</string>
    <string name="birthdate">Birthdate</string>

    <string name="date_format_type_1">yyyy/MM/dd</string>
    <string name="current_password">Current Password*</string>
    <string name="new_password">New Password*</string>
    <string name="reset_password">Reset Password</string>
    <string name="pls_enter_current_pass">Please enter current password</string>
    <string name="pls_enter_new_pass">Please enter new password</string>
    <string name="pls_enter_confirm_pass">Please enter confirm password</string>
    <string name="pls_enter_name">Please enter name</string>

</resources>
