<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/forgot_password_header"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:text="@string/forgot_password_msg"
            android:textSize="14sp" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#F0F0F0"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txt_email_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway_regular"
                android:hint="@string/email_"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_submit_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#686868"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:scaleX="1.3"
        android:text="X"
        android:textAllCaps="true"
        android:textColor="#686868"
        android:textSize="30sp" />

</android.support.v7.widget.CardView>