<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/img_icon_login"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        android:transitionName="@string/splash_to_login_transition_name"/>

    <TextView
        android:id="@+id/tv_welcome_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/welcome_back"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon_login"
        app:layout_constraintVertical_bias="0.050000012" />

    <View android:id="@+id/view_first_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_login"
        app:layout_constraintVertical_bias="0.050000012" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_first_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:text="test@teleworm.us"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

    </android.support.design.widget.TextInputLayout>

    <View android:id="@+id/view_second_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username_login"
        app:layout_constraintVertical_bias="0.050000012" />

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_second_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_password_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:text="test"
            android:inputType="textPassword"
            android:padding="10dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#4474fd"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_password_login"
        app:layout_constraintEnd_toEndOf="@id/txt_password_login"
        app:layout_constraintTop_toTopOf="@id/txt_password_login" />

    </LinearLayout>

    <View android:id="@+id/view_third_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_password"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tv_forgot_pass_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_third_divider"
        app:layout_constraintVertical_bias="0.050000012" />

    <View android:id="@+id/view_forth_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass_login"
        app:layout_constraintVertical_bias="0.20"/>

    <TextView
        android:id="@+id/tv_or_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/raleway_regular"
        android:padding="5dp"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/view_forth_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_forth_divider" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_fb_gplus_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_dark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_or_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_facebook_signin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#566baa"
                android:padding="10dp"
                android:src="@drawable/facebook_ic" />

            <ImageView
                android:id="@+id/img_gplus_signin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#cd212d"
                android:padding="8dp"
                android:src="@drawable/gplus_ic" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_create_acc_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_fb_gplus_login"
        app:layout_constraintVertical_bias="0.5"
        android:padding="5dp"/>


</android.support.constraint.ConstraintLayout>