<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true">

            <android.support.v7.widget.CardView
                android:id="@+id/card_profile_photo"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#E8E8E8"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/upload_ic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway_bold"
                        android:gravity="center"
                        android:text="@string/choose_a_profile_photo"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_app" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/img_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray_divider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_name_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_name_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/raleway_regular"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_email_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/raleway_regular"
                    android:hint="@string/email"
                    android:textColor="@android:color/darker_gray"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:enabled="false"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_phone_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_phone_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/raleway_regular"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="10dp" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_gender_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_gender_editprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/arrow_down"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="@font/raleway_regular"
                        android:textColor="@android:color/black"
                        android:hint="@string/gender"
                        android:padding="10dp" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:id="@+id/view_gender_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </FrameLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_birthdate_editprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_birthdate_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/raleway_regular"
                    android:hint="@string/birthdate"
                    android:textColor="@android:color/black"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:enabled="false"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

                <View
                    android:id="@+id/view_birthdate_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </FrameLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_update_editprofile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/blue_app"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_change_pass_editprofile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/blue_app"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center"
                    android:text="@string/change_password"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>